crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@31.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('hunspell', 'ballyklubber');"
---
SelectStmt@0..45
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..43
    FuncCall@7..43
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..27
        Sconst@17..27 "'hunspell'"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      AConst@29..43
        Sconst@29..43 "'ballyklubber'"
  Ascii41@43..44 ")"
  Ascii59@44..45 ";"

