crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@32.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('hunspell', 'footballyklubber');"
---
SelectStmt@0..49
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..47
    FuncCall@7..47
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..27
        Sconst@17..27 "'hunspell'"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      AConst@29..47
        Sconst@29..47 "'footballyklubber'"
  Ascii41@47..48 ")"
  Ascii59@48..49 ";"

