crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@34.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('hunspell_long', 'skies');"
---
SelectStmt@0..43
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..41
    FuncCall@7..41
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..32
        Sconst@17..32 "'hunspell_long'"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..41
        Sconst@34..41 "'skies'"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

