crates/pg_syntax/tests/snapshots/postgres_regress/tsdicts@39.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT ts_lexize('hunspell_long', 'rebookings');"
---
SelectStmt@0..48
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..46
    FuncCall@7..46
      Ident@7..16 "ts_lexize"
      Ascii40@16..17 "("
      AConst@17..32
        Sconst@17..32 "'hunspell_long'"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..46
        Sconst@34..46 "'rebookings'"
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

